Add player and cpu options

--- a/projects/tictactoe/tictactoe.css
+++ b/projects/tictactoe/tictactoe.css
@@ -4,11 +4,12 @@
 
 body {
   display: flex;
-  align-content: center;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
   height: 100vh;
+  width: 100vw;
   margin: 0;
-  padding: 10vh;
 }
 
 .board {
@@ -17,6 +18,8 @@ body {
   grid-template-rows: 1fr 1fr 1fr;
   height: 40vh;
   width: 40vh;
+  align-self: center;
+  flex: 1, 1, auto;
 }
 
 .square {
@@ -32,4 +35,17 @@ body {
 
 .square:hover {
   background-color: aliceblue;
+}
+
+.display {
+  text-align: center;
+  font-size: larger;
+  height: 10vh;
+  flex: 0.3;
+}
+
+button {
+  flex: 1, 1, auto;
+  width: fit-content;
+  align-self: center;
 }
