--- a/projects/pixel/pixel.css
+++ b/projects/pixel/pixel.css
@@ -1,6 +1,7 @@
 :root {
   --grid-size: 0px;
   --background-colour: #F0F8FF;
+  --font-size: 1px;
 }
 
 @font-face {
@@ -13,43 +14,46 @@
 
 * {
   font-family: 'PixelPirate', Arial, sans-serif;
-  font-size: large;
+  font-size:1em;
   
 }
 
 body {
   padding: 0;
   margin: 0;
+  background-color: #b8ddff;
 }
 
 h1 {
-  font-size: 5em;
   margin: 0;
   align-self: center;
   padding-bottom: 5vh;
+  flex: 1, 1, auto;
+  font-size: calc( var(--font-size) * 3);
 }
 
 .main {
   box-sizing: border-box;
-  padding: 3em;
   margin: 0;
   height: 100vh;
   background-color: #b8ddff;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: auto;
 }
 
 .content {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5vw;
+  flex: 1, 1, auto;
 }
 
 .grid-container {
   display: inline-grid;
   grid-gap: 0px;
+  padding-left: var(--grid-size);
 }
 
 .grid-box {
@@ -63,10 +67,9 @@ h1 {
 }
 
 .input-size {
-  flex: 1;
+  flex: 1, 1, auto;
   -webkit-appearance: none;
-  appearance: none;
-  height: 25px; 
+  appearance: none; 
   background: aliceblue; 
   outline: none; 
   opacity: 0.7; 
@@ -91,13 +94,13 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items:  stretch;
-  gap: 1em;
+  gap: var(--font-size);
 }
 
 .slider {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  flex: 1, 1, auto;
 }
 
 button {
@@ -106,7 +109,8 @@ button {
   outline: none;
   padding: 1em;
   background-color: rgb(234, 238, 241);
-  flex: 1;
+  flex: 1, 1, auto;
+  font-size:  var(--font-size);
 }
 
 button:hover {
@@ -119,8 +123,13 @@ button:hover {
 
 .colour-setting {
   display: flex;
-  flex: 1;
+  flex: 1, 1, auto;
   justify-content: space-between;
-  gap: 1vw;
   align-items: center;
+  font-size:  var(--font-size);
+}
+
+.bg-sel, .colour-sel {
+  flex: 1, 1, auto;
+  width: calc(var(--font-size)*3);
 }
