Add skeletal todolist project

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: 'Hack';
-  src: url(web/fonts/hack-regular.woff);
+  src: url(web/fonts/hack/hack-regular.woff);
 }
 
 /* fjalla-one-regular - latin */
