--- a/projects/todolist/src/style.css
+++ b/projects/todolist/src/style.css
@@ -41,3 +41,17 @@ body {
 .project-bar {
   flex: 3 1 auto;
 }
+
+li {
+  list-style-type: none;
+  padding: 0.2em;
+}
+
+li:hover {
+  cursor: pointer;
+  background-color: #888;
+}
+
+.active {
+  background-color: #888;
+}
